[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/fonts/gunplay/gunplay_3d.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://stage/gnome_showcase/GnomeShowcase.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/GameOverScreen.gd" type="Script" id=3]
[ext_resource path="res://ui/menus/button_font.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 105
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GnomeShowcase" parent="." instance=ExtResource( 2 )]
margin_left = 675.995
margin_top = 73.5392
margin_right = 1275.99
margin_bottom = 973.539

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.337
anchor_top = 1.0
anchor_right = 0.663
anchor_bottom = 1.0
margin_left = -0.0400391
margin_top = -425.0
margin_right = 0.039917
grow_vertical = 0
custom_constants/margin_top = 0
custom_constants/margin_bottom = 172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 625.0
margin_bottom = 253.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 625.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1
autowrap = true

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 625.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.45098, 0.580392, 0.227451, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.776471, 0.776471, 1 )
text = "RETRY"
flat = true

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 625.0
margin_bottom = 253.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.45098, 0.580392, 0.227451, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.776471, 0.776471, 1 )
text = "QUIT"
flat = true
